<resources>
    <string name="app_name">KakaoBank</string>

    <!-- Home -->
    <string name="username">김미정</string>
    <string name="tv_my_account">내 계좌</string>
    <string name="tv_credit_score">김미정님의 신용점수는\n대출 승인 가능성이 높아요</string>
    <string name="tv_btn_limit">한도 확인하기</string>
    <string name="tv_bank_book1_name">햄들의 통장</string>
    <string name="tv_bank_book1_leftover">0원</string>
    <string name="tv_btn_card">카드</string>
    <string name="tv_btn_transfer">이체</string>
    <string name="tv_safe_box">세이프박스</string>
    <string name="tv_safe_box_leftover">394원</string>
    <string name="tv_bank_book2_name">햄통장</string>
    <string name="tv_bank_book2_leftover">304원</string>
    <string name="tv_bank_book3_name">김미정의 통장</string>
    <string name="tv_bank_book3_leftover">41원</string>
    <string name="tv_bank_book3_withdraw">출금가능</string>
    <string name="tv_bank_book3_withdraw_money">3,000,041원</string>
    <string name="tv_emergency_fund">비상금</string>
    <string name="tv_everyday_saving">춘식이와 한달동안 매일매일 저금</string>
    <string name="tv_one_month_saving_start">한달적금 시작하기</string>
    <string name="tv_joint_account">모임통장</string>
    <string name="tv_everyday">매일</string>
    <string name="tv_pin_money">용돈 받기</string>
    <string name="tv_credit_loan">신용대출</string>
    <string name="tv_compare">비교하기</string>
    <string name="tv_couphone">쿠폰</string>
    <string name="tv_buy_sell">사고팔기</string>
    <string name="tv_easy_home">간편 홈</string>
    <string name="tv_slash">|</string>
    <string name="tv_screen_edit">화면 편집</string>

    <!--history-->
    <string name="history_transfer">이체하기</string>
    <string name="history_get">가져오기</string>

    <!-- transfer -->
    <string name="appbar_transfer_close">닫기</string>
    <string name="tv_transfer_title">이체</string>
    <string name="tv_transfer_search">받는사람 이름 또는 계좌번호</string>
    <string name="tv_transfer_account_number">계좌번호</string>
    <string name="tv_transfer_kakao_friend">카카오톡 친구</string>
    <string name="tv_transfer_my_account">내 계좌</string>
    <string name="tv_transfer_recent_transfer">최근 이체</string>
    <string name="tv_transfer_enter">계좌번호 직접입력</string>
    <string name="tv_transfer_my_account_name">김미정의 통장</string>
    <string name="tv_transfer_my_account_number">카카오뱅크 3333-23-9165754</string>

    <!-- transfer_bank_select -->
    <string name="appbar_transfer_bank_select_close">취소</string>
    <string name="tv_transfer_bank_select_title">은행선택</string>
    <string name="tv_transfer_bank_select_search">은행검색</string>
    <string name="tab_transfer_bank_select_bank">은행</string>
    <string name="tab_transfer_bank_select_stock">증권</string>

</resources>