<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cl_bank_book1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:background="@drawable/shape_main_fill_15_rect"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_bank_book1_logo"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:src="@drawable/ic_bank_book1_logo"
        android:layout_marginStart="19dp"
        android:layout_marginTop="33dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_bank_book1_name"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="-5dp"
        android:text="@string/tv_bank_book1_name"
        android:textAppearance="@style/TextAppearance.KakaoBank.number2_regular_11"
        android:textColor="@color/black2"
        app:layout_constraintEnd_toStartOf="@+id/iv_bank_book1_star"
        app:layout_constraintStart_toEndOf="@id/iv_bank_book1_logo"
        app:layout_constraintTop_toTopOf="@id/iv_bank_book1_logo" />

    <TextView
        android:id="@+id/tv_bank_book1_leftover"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/tv_bank_book1_leftover"
        android:textAppearance="@style/TextAppearance.KakaoBank.head7_semi_16"
        android:textColor="@color/black2"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/tv_bank_book1_name"
        app:layout_constraintStart_toEndOf="@id/iv_bank_book1_logo"/>

    <ImageView
        android:id="@+id/iv_bank_book1_star"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/ic_star"
        android:layout_marginStart="1dp"
        android:layout_marginTop="-3dp"
        app:layout_constraintTop_toTopOf="@id/tv_bank_book1_name"
        app:layout_constraintStart_toEndOf="@id/tv_bank_book1_name"/>

    <ImageView
        android:id="@+id/iv_btn_more"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/ic_btn_more"
        android:layout_marginEnd="19dp"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_btn_transfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="13dp"
        android:paddingVertical="8dp"
        android:gravity="center"
        android:text="@string/tv_btn_transfer"
        android:textAppearance="@style/TextAppearance.KakaoBank.sub2_semi_12"
        android:background="@drawable/shape_yellow0_fill_20_rect"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintTop_toBottomOf="@id/iv_btn_more"
        app:layout_constraintEnd_toEndOf="@id/iv_btn_more"/>

    <TextView
        android:id="@+id/tv_btn_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="13dp"
        android:paddingVertical="8dp"
        android:gravity="center"
        android:text="@string/tv_btn_card"
        android:textAppearance="@style/TextAppearance.KakaoBank.sub2_semi_12"
        android:background="@drawable/shape_yellow0_fill_20_rect"
        android:layout_marginEnd="7dp"
        app:layout_constraintEnd_toStartOf="@id/tv_btn_transfer"
        app:layout_constraintTop_toTopOf="@id/tv_btn_transfer"/>

    <View
        android:id="@+id/v_horizontal_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/yellow1"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_btn_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/tv_safe_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_safe_box"
        android:textAppearance="@style/TextAppearance.KakaoBank.number2_regular_11"
        android:textColor="@color/black2"
        android:layout_marginStart="1dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="22dp"
        app:layout_constraintTop_toBottomOf="@id/v_horizontal_line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/iv_bank_book1_logo"/>

    <TextView
        android:id="@+id/tv_safe_box_leftover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_safe_box_leftover"
        android:textAppearance="@style/TextAppearance.KakaoBank.body6_semi_14"
        android:textColor="@color/black2"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@id/v_horizontal_line"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>