<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white0">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_transfer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <TextView
                    android:id="@+id/tv_transfer_appbar_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="9dp"
                    android:clickable="true"
                    android:paddingHorizontal="11dp"
                    android:paddingVertical="15dp"
                    android:text="@string/appbar_transfer_close"
                    android:textAppearance="@style/TextAppearance.KakaoBank.body2_medium_15" />

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/tv_transfer_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="9dp"
            android:text="@string/tv_transfer_title"
            android:textAppearance="@style/TextAppearance.KakaoBank.head4_semi_21"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar_transfer" />

        <ImageView
            android:id="@+id/iv_transfer_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="28dp"
            android:src="@drawable/ic_transfer_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_transfer_title" />

        <TextView
            android:id="@+id/tv_transfer_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:text="@string/tv_transfer_search"
            android:textAppearance="@style/TextAppearance.KakaoBank.body4_regular_15"
            android:textColor="@color/gray7"
            app:layout_constraintBottom_toBottomOf="@id/iv_transfer_search"
            app:layout_constraintStart_toEndOf="@id/iv_transfer_search"
            app:layout_constraintTop_toTopOf="@id/iv_transfer_search" />

        <View
            android:id="@+id/view_transfer_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="17dp"
            android:background="@color/gray3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_transfer_search" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_transfer_start_19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="19dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_transfer_end_19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="19dp" />

        <TextView
            android:id="@+id/tv_transfer_account_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/shape_gray0_fill_14_rect"
            android:gravity="center"
            android:paddingVertical="6dp"
            android:text="@string/tv_transfer_account_number"
            android:textAppearance="@style/TextAppearance.KakaoBank.sub2_semi_12"
            app:layout_constraintEnd_toStartOf="@id/tv_transfer_kakao_friend"
            app:layout_constraintStart_toStartOf="@id/guide_transfer_start_19"
            app:layout_constraintTop_toBottomOf="@id/view_transfer_divider" />

        <TextView
            android:id="@+id/tv_transfer_kakao_friend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="6dp"
            android:text="@string/tv_transfer_kakao_friend"
            android:textAppearance="@style/TextAppearance.KakaoBank.sub2_semi_12"
            android:textColor="@color/gray9"
            app:layout_constraintBottom_toBottomOf="@id/tv_transfer_account_number"
            app:layout_constraintEnd_toEndOf="@id/guide_transfer_end_19"
            app:layout_constraintStart_toEndOf="@id/tv_transfer_account_number"
            app:layout_constraintTop_toTopOf="@id/tv_transfer_account_number" />

        <TextView
            android:id="@+id/tv_transfer_my_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            android:text="@string/tv_transfer_my_account"
            android:textAppearance="@style/TextAppearance.KakaoBank.sub1_semi_13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_transfer_account_number" />

        <ImageView
            android:id="@+id/iv_transfer_my_account"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="27dp"
            android:background="@drawable/shape_line_circle"
            android:clipToOutline="true"
            android:src="@drawable/ic_kakao_bank"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_transfer_my_account" />

        <LinearLayout
            android:id="@+id/layout_transfer_my_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/iv_transfer_my_account"
            app:layout_constraintStart_toEndOf="@id/iv_transfer_my_account"
            app:layout_constraintTop_toTopOf="@id/iv_transfer_my_account">

            <TextView
                android:id="@+id/tv_transfer_my_account_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/tv_transfer_my_account_name"
                android:textAppearance="@style/TextAppearance.KakaoBank.body7_regular_14" />

            <TextView
                android:id="@+id/tv_transfer_my_account_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_transfer_my_account_number"
                android:textAppearance="@style/TextAppearance.KakaoBank.number2_regular_11"
                android:textColor="@color/gray8" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_transfer_recent_transfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/tv_transfer_recent_transfer"
            android:textAppearance="@style/TextAppearance.KakaoBank.sub1_semi_13"
            app:layout_constraintStart_toStartOf="@id/tv_transfer_my_account"
            app:layout_constraintTop_toBottomOf="@id/layout_transfer_my_account" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_transfer_recent_transfer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="27dp"
            android:paddingStart="20dp"
            android:paddingEnd="22dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/layout_transfer_enter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_transfer_recent_transfer"
            tools:listitem="@layout/item_transfer_account" />

        <LinearLayout
            android:id="@+id/layout_transfer_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="26dp"
            android:background="@drawable/shape_gray3_line_10_rect"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:src="@drawable/ic_transfer_enter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="20dp"
                android:text="@string/tv_transfer_enter"
                android:textAppearance="@style/TextAppearance.KakaoBank.body6_semi_14"
                android:textColor="@color/gray9" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>