<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_white0_fill_25_rect"
        app:layout_behavior="com.google.android.material.bottom-sheet.BottomSheetBehavior">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_transfer_bank_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <TextView
                    android:id="@+id/tv_transfer_appbar_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="9dp"
                    android:clickable="true"
                    android:paddingHorizontal="11dp"
                    android:paddingVertical="15dp"
                    android:text="@string/appbar_transfer_bank_select_close"
                    android:textAppearance="@style/TextAppearance.KakaoBank.body2_medium_15" />

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/tv_transfer_bank_select_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:text="@string/tv_transfer_bank_select_title"
            android:textAppearance="@style/TextAppearance.KakaoBank.head6_semi_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar_transfer_bank_select" />

        <LinearLayout
            android:id="@+id/layout_transfer_bank_select_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_gray0_fill_9_rect"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_transfer_bank_select_title">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:src="@drawable/ic_transfer_search" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="19dp"
                android:layout_marginBottom="20dp"
                android:text="@string/tv_transfer_bank_select_search"
                android:textAppearance="@style/TextAppearance.KakaoBank.number3_regular_13"
                android:textColor="@color/gray5" />

        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_transfer_bank_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="11dp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_transfer_bank_select_search"
            app:tabIndicator="@drawable/shape_gray7_fill_rect"
            app:tabIndicatorColor="@color/gray7"
            app:tabIndicatorFullWidth="true"
            app:tabIndicatorGravity="bottom"
            app:tabIndicatorHeight="3dp"
            app:tabRippleColor="@null"
            app:tabSelectedTextAppearance="@style/TextAppearance.KakaoBank.body2_medium_15"
            app:tabSelectedTextColor="@color/dark_gray1"
            app:tabTextAppearance="@style/TextAppearance.KakaoBank.body2_medium_15"
            app:tabTextColor="@color/gray7">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_transfer_bank_select_bank" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_transfer_bank_select_stock" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_transfer_bank_select"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tab_transfer_bank_select" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>