<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/iv_bank_book3"
        android:layout_width="match_parent"
        android:layout_height="134dp"
        android:src="@drawable/box_bank_book3"
        android:background="@null"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="17dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/iv_logo_skyblue"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:src="@drawable/ic_logo_skyblue"
        android:layout_marginStart="19dp"
        android:layout_marginTop="33dp"
        app:layout_constraintTop_toTopOf="@id/iv_bank_book3"
        app:layout_constraintStart_toStartOf="@id/iv_bank_book3"/>

    <TextView
        android:id="@+id/tv_bank_book3_name"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/tv_bank_book3_name"
        android:textAppearance="@style/TextAppearance.KakaoBank.number2_regular_11"
        android:textColor="@color/black2"
        android:layout_marginStart="55dp"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toTopOf="@id/iv_bank_book3"
        app:layout_constraintStart_toStartOf="@id/iv_bank_book3"/>

    <TextView
        android:id="@+id/tv_bank_book3_leftover"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/tv_bank_book3_leftover"
        android:textAppearance="@style/TextAppearance.KakaoBank.head7_semi_16"
        android:textColor="@color/black2"
        android:layout_marginStart="55dp"
        android:layout_marginTop="47dp"
        app:layout_constraintTop_toTopOf="@id/iv_bank_book3"
        app:layout_constraintStart_toStartOf="@id/iv_bank_book3"/>

    <TextView
        android:id="@+id/tv_bank_book3_withdraw"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/tv_bank_book3_withdraw"
        android:textAppearance="@style/TextAppearance.KakaoBank.number2_regular_11"
        android:textColor="@color/blue4"
        android:layout_marginStart="55dp"
        android:layout_marginTop="75dp"
        app:layout_constraintTop_toTopOf="@id/iv_bank_book3"
        app:layout_constraintStart_toStartOf="@id/iv_bank_book3"/>

    <TextView
        android:id="@+id/tv_bank_book3_withdraw_money"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/tv_bank_book3_withdraw_money"
        android:textAppearance="@style/TextAppearance.KakaoBank.number2_regular_11"
        android:textColor="@color/blue4"
        android:layout_marginStart="5dp"
        android:layout_marginTop="75dp"
        app:layout_constraintTop_toTopOf="@id/iv_bank_book3"
        app:layout_constraintStart_toEndOf="@id/tv_bank_book3_withdraw"/>

    <ImageView
        android:id="@+id/iv_emergency_fund"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/ic_emergency_fund"
        android:layout_marginStart="125dp"
        android:layout_marginTop="29dp"
        app:layout_constraintTop_toTopOf="@id/iv_bank_book3"
        app:layout_constraintStart_toStartOf="@id/iv_bank_book3"/>

    <ImageButton
        android:id="@+id/iv_btn_more"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/ic_btn_more"
        android:background="@null"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toTopOf="@id/iv_bank_book3"
        app:layout_constraintEnd_toEndOf="@id/iv_bank_book3"/>

    <ImageButton
        android:id="@+id/iv_btn_transfer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/ic_btn_transfer_skyblue"
        android:background="@null"
        android:layout_marginEnd="21dp"
        android:layout_marginTop="86dp"
        app:layout_constraintTop_toTopOf="@id/iv_bank_book3"
        app:layout_constraintEnd_toEndOf="@id/iv_bank_book3"/>

    <ImageButton
        android:id="@+id/iv_btn_card"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/ic_btn_card_skyblue"
        android:background="@null"
        android:layout_marginEnd="7dp"
        app:layout_constraintTop_toTopOf="@id/iv_btn_transfer"
        app:layout_constraintEnd_toStartOf="@id/iv_btn_transfer"/>

</androidx.constraintlayout.widget.ConstraintLayout>